test/arrays/diten/forallArrayTypeVar.good
forallArrayTypeVar.chpl:1: syntax error: near ';'
